тут я начала делать поиск, еще ниче не сломано

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">KelineYt</string>
-    <string name="rightAddress">The Right Address\nFor Shopping\nAnyday</string>
-    <string name="qulity">It is now very easy to reach the\nbest quality among the\nproducts on the internet!</string>
+    <string name="rightAddress">Ваше вдохновение\nдля ремонта\nв любое время</string>
+    <string name="qulity">С нашей помощью вы создадите\nлучший интерьер</string>
 </resources>
